# gel-ast

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
org/wanderlinks/gel/v1/: gel_ast.proto
proto/org/wanderlinks/gel/v1/: gel_ast.proto
